--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <title>Library</title>
 </head>
 <body>
-    
+    <!-- <button class="add-button">+</button> -->
+    <form action="" method="post" id="add-book-form">
+        <div>
+            <label for="title">Title</label>
+            <input type="text" name="title" id="title">
+        </div>
+        <div>
+            <label for="author">Author</label>
+            <input type="text" name="author" id="author">
+        </div>
+        <div>
+            <label for="pages">Page Count</label>
+            <input type="number" name="pages" id="pages">
+        </div>
+        <button type="submit" value="Add" form="add-book-form" class="add-button">Add</button>
+    </form>
 </body>
 </html>
