--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     <title>Library</title>
 </head>
 <body>
-    <!-- <button class="add-button">+</button> -->
     <form action="" method="post" id="add-book-form">
         <div>
             <label for="title">Title</label>
-            <input type="text" name="title" id="title">
+            <input type="text" name="title" id="title" required>
         </div>
         <div>
             <label for="author">Author</label>
@@ -22,7 +21,14 @@
             <label for="pages">Page Count</label>
             <input type="number" name="pages" id="pages">
         </div>
+        <div>
+            <label for="read">Read</label>
+            <input type="checkbox" name="read" id="read" value="read">
+        </div>
         <button type="submit" value="Add" form="add-book-form" class="add-button">Add</button>
     </form>
+    <div class="content-container">
+
+    </div>
 </body>
 </html>
